FIN-11284 - Incorporate Gradle lockfile